[#742] Fixed scrollbar styling

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -5,11 +5,12 @@
 ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 7px;
-    background-color: #323232;
+    background-color: #000;
+    
 }
 ::-webkit-scrollbar-thumb {
     border-radius: 4px;
-    background-color: rgba(0,0,0,.5);
+    background-color: #eee;
     -webkit-box-shadow: 0 0 .03px rgba(255,255,255,.5);
 }
 .container {
